--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,60 @@
 body {
-    background-color: green;
-    /* font-family: fantasy; */
+    background-color: lightgray;
+    font-family:monospace;
 }
 h1 {
-    color:white;
+    color:#04AA6D;
     text-align: center;
     text-decoration: underline;
 }
 p {
-    color:red
+    color:black;
 }
-.topnav {
+.topNav {
     background-color: #333;;
-    overflow: hidden;
+    overflow-x: hidden;
+    right: 0;
+    height: 100%;
+    width: 175px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    padding-top: 20px;
+    transition: 0.5s;
+    text-align: right;
 }
-.topnav a {
+.topNav a {
     float: right;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding:  8px 8px 8px 30px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 20px;
+    display: block;
+    transition: 0.1s;
 }
-.topnav a:hover {
+.topNav a:hover {
     background-color: lightgray;
     color: black;
 }
-.topnav a.active {
+.topNav a.active {
     background-color: #04AA6D;
     color: white;
+}
+.topNav .closebtn {
+    position: absolute;
+    bottom: 30px;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+#main {
+    transition: margin-left .5s;
+}
+@media screen and (max-height: 450px){
+    .sideNav {padding-top: 15px;}
+    .sideNav a {font-size: 18px;}
 }
 
 img {
