--- a/styles.css
+++ b/styles.css
@@ -12,25 +12,25 @@ p {
 }
 .topNav {
     background-color: #333;;
-    overflow-x: hidden;
-    right: 0;
-    height: 100%;
-    width: 175px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    padding-top: 20px;
-    transition: 0.5s;
-    text-align: right;
+    overflow: hidden;
+    /* right: 0; */
+    /* height: 100%; */
+    /* width: 175px; */
+    /* position: fixed; */
+    /* z-index: 1; */
+    /* top: 0; */
+    /* left: 0; */
+    /* padding-top: 20px; */
+    /* transition: 0.5s; */
+    /* text-align: right; */
 }
 .topNav a {
     float: right;
     color: #f2f2f2;
     text-align: center;
-    padding:  8px 8px 8px 30px;
+    padding:  14px 16px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 17px;
     display: block;
     transition: 0.1s;
 }
