--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightgray;
+    background-color: #333;
     font-family:monospace;
 }
 h1 {
@@ -61,5 +61,5 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    width: 20%;
 }
