--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@ body {
     font-family:monospace;
 }
 h1 {
-    color:#04AA6D;
+    color: #f2f2f2;;
     text-align: center;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 p {
     color:black;
@@ -13,22 +13,14 @@ p {
 .topNav {
     background-color: #333;;
     overflow: hidden;
-    /* right: 0; */
-    /* height: 100%; */
-    /* width: 175px; */
-    /* position: fixed; */
-    /* z-index: 1; */
-    /* top: 0; */
-    /* left: 0; */
-    /* padding-top: 20px; */
-    /* transition: 0.5s; */
-    /* text-align: right; */
+    padding-top: 10px;
 }
 .topNav a {
     float: right;
     color: #f2f2f2;
     text-align: center;
-    padding:  14px 16px;
+    padding:  14px 14px;
+    /* padding-left: 25px; */
     text-decoration: none;
     font-size: 17px;
     display: block;
@@ -57,9 +49,13 @@ p {
     .sideNav a {font-size: 18px;}
 }
 
-img {
+.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 20%;
+}
+
+iframe {
+    height: 700px;
+    width: 660px;
 }
