--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ p {
     background-color: #333;;
     overflow: hidden;
     padding-top: 10px;
+    padding-right:10px;
 }
 .topNav a {
     float: right;
@@ -58,4 +59,76 @@ p {
 iframe {
     height: 700px;
     width: 660px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* background-color: #04AA6D; */
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    border-radius: 50%;
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    /* background-color: white; */
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.accordion {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.images {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+hr{
+    color: white;
+    width: 100%;
+}
+
+.title {
+    color:white;
+}
+
+.subheading {
+    color:lightgray;
 }
